# thet287-proj

./: README.md
backend/: pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.js  Lobby.js  Paint.js
src/: App.js
src/backend/: api.py  main.py  pyproject.toml  requirements.txt
src/frontend/: App.css  Lobby.js  Menu.js
